--- a/tests/Makefile
+++ b/tests/Makefile
@@ -11,10 +11,12 @@ all:
 run:
 	./$(TEST).o $(M) $(N)
 
+cwd = $(shell pwd)
+
 # Run cdof
 cdof: all
-	$(shell sudo docker run --rm -v $(shell pwd):/tmp/work grammatech/ddisasm ddisasm /tmp/work/$(TEST).o --ir /tmp/work/$(TEST).gtirb)
-	$(shell sudo docker run --rm -v $(shell pwd):/tmp/work grammatech/ddisasm gtirb-pprinter /tmp/work/$(TEST).gtirb --asm /tmp/work/$(TEST).s)
+	sudo docker run --rm -v $(cwd):/tmp/work grammatech/ddisasm ddisasm /tmp/work/$(TEST).o --ir /tmp/work/$(TEST).gtirb
+	sudo docker run --rm -v $(cwd):/tmp/work grammatech/ddisasm gtirb-pprinter /tmp/work/$(TEST).gtirb --asm /tmp/work/$(TEST).s	
 	cdof $(test_run) $(TEST).s
 
 # Measure Before Optimization
@@ -26,4 +28,4 @@ measure_op:
 	perf stat  -e cache-references,cache-misses ./$(TEST).owith_prefetch $(M) $(N)
 
 clean:
-	rm $(TEST).o $(TEST).owith_prefetch $(TEST).swith_prefetch.s $(TEST).s $(TEST).gtirb 
+	rm -f $(TEST).o $(TEST).owith_prefetch $(TEST).swith_prefetch.s $(TEST).s $(TEST).gtirb 
