Organize tests directory

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,3 +1,10 @@
+# Directories
+BENCHMARK := benchmark_scripts
+EXPERIMENT := experiment_csv
+WP := workload_profiles
+BIN := _bin
+
+# Arguments
 TEST ?= memchase_test
 SAMPLE_N ?= 20
 test_args ?= 12
@@ -5,7 +12,8 @@ default: build
 
 # Build test
 build:
-	gcc $(TEST).c -o $(TEST).o -g -O0
+	mkdir -p $(BIN)
+	gcc $(BENCHMARK)/$(TEST).c -o $(BIN)/$(TEST).o -g 
 
 # Dry Run 
 run: build
@@ -15,9 +23,10 @@ cwd = $(shell pwd)
 
 # Run cdof
 cdof: build
-	sudo docker run --rm -v $(cwd):/tmp/work grammatech/ddisasm ddisasm /tmp/work/$(TEST).o --ir /tmp/work/$(TEST).gtirb
-	sudo docker run --rm -v $(cwd):/tmp/work grammatech/ddisasm gtirb-pprinter /tmp/work/$(TEST).gtirb --asm /tmp/work/$(TEST).s	
-	cdof $(TEST)_runs.txt $(TEST).s
+	mkdir -p $(BIN)
+	sudo docker run --rm -v $(cwd):/tmp/work grammatech/ddisasm ddisasm /tmp/work/$(BIN)/$(TEST).o --ir /tmp/work/$(BIN)/$(TEST).gtirb
+	sudo docker run --rm -v $(cwd):/tmp/work grammatech/ddisasm gtirb-pprinter /tmp/work/$(BIN)/$(TEST).gtirb --asm /tmp/work/$(BIN)/$(TEST).s	
+	cdof $(WP)/$(TEST)_runs.txt $(BIN)/$(TEST).s
 
 # Measure Before Optimization
 measure_nop:
@@ -28,13 +37,13 @@ measure_op:
 	perf stat  -e cache-references,cache-misses,LLC-loads,LLC-load-misses ./$(TEST).owith_prefetch $(test_args)
 
 measure: 
-	python3 average.py $(TEST) $(TEST)_experiments.csv $(SAMPLE_N)
+	python3 average.py $(TEST) $(EXPERIMENT)/$(TEST)_experiments.csv $(SAMPLE_N)
 
 graph: 
 	python3 graph.py $(TEST)
 
 clean:
-	rm -rf $(TEST).o $(TEST).owith_prefetch $(TEST).swith_prefetch.s $(TEST).s $(TEST).gtirb output.txt 
+	rm -rf $(BIN) output.txt 
 
 clean_measure:
 	rm -rf ./*_measurements
